[gd_scene load_steps=3 format=3 uid="uid://crgdxs2v1e67b"]

[ext_resource type="Script" path="res://scripts/home.gd" id="1_rreuw"]
[ext_resource type="PackedScene" uid="uid://buxbsd5524tmv" path="res://scenes/audioplayer.tscn" id="2_jelcf"]

[node name="HomeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rreuw")

[node name="GameTitle_HomeScreen" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Forest Jump"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton_HomeScreen" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -50.5
offset_right = 23.0
offset_bottom = -19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 0
text = "Start"

[node name="ControlsButton_HomeScreen" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -15.5
offset_right = 35.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Controls"

[node name="CreditsButton_HomeScreen" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = 20.5
offset_right = 31.5
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2
text = "Credits"

[node name="FPSCounter_HomeScreen" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="audioplayer" parent="." instance=ExtResource("2_jelcf")]

[connection signal="pressed" from="StartButton_HomeScreen" to="." method="_on_start_button_home_screen_pressed"]
[connection signal="pressed" from="ControlsButton_HomeScreen" to="." method="_on_settings_button_home_screen_pressed"]
[connection signal="pressed" from="CreditsButton_HomeScreen" to="." method="_on_credits_button_home_screen_pressed"]
